--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ source-code: https://github.com/slmitc9/digihistory
 # title of site appears in banner
 title: Digital History 
 # tagline, a short phrase that will appear throughout the site in the top banner
-tagline: Worlds Away What Shall this Project Be? Jeepers
+tagline: Women and Their Labor
 # creator of the digital project, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: slmitc9
 
