--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -8,7 +8,7 @@
 #
 # featured image is used in home page banner and in meta markup to represent the website
 # use either the name of an image file in this repository's "objects" folder (ex. feature-image.jpg), or a full url to an image elsewhere
-featured-image: feature-image.jpg
+featured-image: library-of-congress-WzPxmB_tRlw-unsplash.jpg
 # optional: add extra padding around site title for a larger image feature. 
 home-title-y-padding: 9em # Default is 8em
 # optional: change position of background image, center, top, bottom
